her şey çalışıyor printorderı değiştiricem

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(ASSGN4)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(ASSGN4 main.cpp AVLTree.cpp AVLTree.h RedBlackTree.cpp RedBlackTree.h BinarySearchTree.cpp BinarySearchTree.h PrimaryNode.cpp PrimaryNode.h Model1.cpp Model1.h SecondaryNode.cpp SecondaryNode.h ReadFile.cpp ReadFile.h WebStore.cpp WebStore.h)
+add_executable(ASSGN4 main.cpp AVLTree.cpp AVLTree.h RedBlackTree.cpp RedBlackTree.h BinarySearchTree.cpp BinarySearchTree.h PrimaryNode.cpp PrimaryNode.h Webstore.cpp Webstore.h SecondaryNode.cpp SecondaryNode.h ReadFile.cpp ReadFile.h)
